--- a/Partie_2.Rmd
+++ b/Partie_2.Rmd
@@ -109,12 +109,12 @@ Le $F$ est déterminé par l'équation suivante: $F(t_o)=0.$
 
 
 
-Pour le modèle que nous proposons, la première modification apportée est que nous fixons un coefficient d'impact $i$ pour la simulation qui agit sur le dommage subi par chaque composante. Ainsi ce coefficient d'impact d'une valeur variant entre 0 et 1 dicte le dommage subi par les différents éléments de la simulation. Nous ajustons l'étendue possible de $dC$, $dM$ et $dR$ afin que la variabilité des dommages entre un coefficient d'impact à 1 et un coefficient d'impact à 0 corresponde aux limites de ce qui est observé par le document de Cervantes et al. (2020). Ainsi, la perte de couvert de corail est également proportionnel à $F$, mais est bornée à 0% quand $i\in [0,0.25]$, correspondant à un ouragan de trop faible intensité pour réduire le couvert coralien, et varie linéairement entre 0% et 75% quand $I\in[0.25,1]$. Pour le couvert de macroalgues, le dommage subi reste en moyenne le même, soit 80%, mais le coefficient d'impact ajoute une variabilité de 25% qui fait en sorte que le dommage varie proportionnellement entre 60% et 100% selon la valeur de $I$. Cette modification pallie partiellement le fait qu'en situation d'ouragan plutôt faible, les macroalgues sont désavantagées par rapport au corail. Pour la rugosité, la littérature semblait démontrer que la proportion de rugosité perdue était proportionnelle à la valeur de rugosité elle même, nous avons donc ajouté la composante $G=0.1\times (R-1)$ ainsi qu'une relation avec $I$ faisant ainsi varier $dR$ entre 0 et 50% selon $R$ et $I$, mais seulement limité entre 0% et 5% si $I=0$. 
+Pour le modèle que nous proposons, la première modification apportée est que nous fixons un coefficient d'impact $i$ pour la simulation qui agit sur le dommage subi par chaque composante. Ainsi ce coefficient d'impact d'une valeur variant entre 0 et 1 dicte le dommage subi par les différents éléments de la simulation. Nous ajustons l'étendue possible de $dC$, $dM$ et $dR$ afin que la variabilité des dommages entre un coefficient d'impact à 1 et un coefficient d'impact à 0 corresponde aux limites de ce qui est observé par le document de Cervantes et al. (2020). Ainsi, la perte de couvert de corail est également proportionnel à $F$, mais est bornée à 0% quand $i\in [0,0.3]$, correspondant à un ouragan de trop faible intensité pour réduire le couvert coralien, et varie linéairement entre 0% et 75% quand $i\in[0.3,1]$. Pour le couvert de macroalgues, le dommage subi reste en moyenne le même, soit 80%, mais le coefficient d'impact ajoute une variabilité de 25% qui fait en sorte que le dommage varie proportionnellement entre 60% et 100% selon la valeur de $I$. Cette modification pallie partiellement le fait qu'en situation d'ouragan plutôt faible, les macroalgues sont désavantagées par rapport au corail. Pour la rugosité, la littérature semblait démontrer que la proportion de rugosité perdue était proportionnelle à la valeur de rugosité elle même, nous avons donc ajouté la composante $G=0.1\times (R-1)$ ainsi qu'une relation avec $i$ faisant ainsi varier $dR$ entre 0 et 50% selon $R$ et $i$, mais seulement limité entre 0% et 5% si $i=0$. 
 Une autre modification que nous avons apportée au modèle est une forme d'accélération du rythme auquel la valeur de F augmente. Avec les années qui passent, nous supposons que les dégâts des ouragans deviendront plus grave plus rapidement en fonction du temps écoulé depuis le dernier ouragan, à cause des changements climatiques. Ainsi, si au début de la simulation, il faut 25.5 années pour que F atteigne son maximum à 0.5, graduellement cette période sera raccourcie pour être de seulement 17 années à la fin. Les équations déterminant le dommage à chaque composante du système lors d'un ouragan est donc défini par les équations suivantes:
 
-+ $dC=C\times (F+ \sigma \epsilon)\times (2\times I-0.5)$ où on pose que si $dC<0$, alors $dC=0$
-+ $dM=M\times m_H\times(0.5\times I+0.75)$
-+$dR=(R-1)\times(G + \sigma\epsilon)\times(2.25\times I+0.25)$ où $G=0.1\times (R-1)$
++ $dC=C\times (F+ \sigma \epsilon)\times (2\times i-0.5)$ où on pose que si $dC<0$, alors $dC=0$
++ $dM=M\times m_H\times(0.5\times i+0.75)$
++$dR=(R-1)\times(G + \sigma\epsilon)\times(2.25\times i+0.25)$ où $G=0.1\times (R-1)$
 +$F(t_o)=0.0512+0.0176\times t_o\times(1+t/200)$ où si $F(t_o)>0.5$ alors $F(t_o)=0.5$
 
 
